--- a/css/in/projects.scss
+++ b/css/in/projects.scss
@@ -14,7 +14,6 @@ section {
     @apply grid list-none gap-4 grid-content-center max-w-screen grid-flow-row;
     li {
       @apply p4 border-2 border-solid border-puccin-crust bg-puccin-mantle flex items-center justify-center rounded-2xl;
-      @apply hover:border-puccin-text;
       @apply transition-colors ease-in-out duration-300;
       a {
         @apply flex gap-4 items-center decoration-none max-w-screen;
@@ -28,6 +27,9 @@ section {
           }
         }
       }
+    }
+    li:hover {
+      @apply border-puccin-text;
     }
   }
 }
@@ -46,7 +48,7 @@ section {
   }
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) and (max-width: 1199px) {
   .project-grid {
     li {
       @apply w-xl h-46;
@@ -61,9 +63,9 @@ section {
 }
 
 
-@media (min-width: 1025px) and (max-width: 1299px) {
+@media (min-width: 1200px) {
   .project-grid {
-    @apply grid-cols-2;
+    @apply grid-cols-1;
     li {
       @apply w-xl h-46;
       a {
